# family_emotions_app

./: .env.example  .gitignore  ARCHITECTURE.md  BACKEND_COMPLETION_SUMMARY.md  CONTRIBUTING.md  COOLIFY_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  PROJECT_COMPLETION_REPORT.md  PROXY_SETUP.md  README.md  RUSSIAN_LOCALIZATION_SUMMARY.md  alembic.ini  docker-compose.host.yml  docker-compose.yml  main.py  nixpacks.toml  pyproject.toml  quick-setup.sh  requirements.txt  test_db_connection.py  test_russian_localization.py
.github/workflows/: ci.yml
app/: __init__.py  config.py
app/core/: __init__.py
docs/: api.md  database-schema.md  developer-guide.md  operations-guide.md  privacy-policy.md  setup-guide.md  terms-of-service.md  user-manual.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: init.sql  setup.sh
src/: main.py
src/application/: __init__.py  checkin_service.py  emotion_analyzer.py  scheduler.py
src/core/: config.py  container.py  exceptions.py  logging.py
src/core/domain/: __init__.py  aggregates.py  entities.py  events.py  exceptions.py  value_objects.py
src/core/localization/: __init__.py  languages.py  translator.py
src/core/localization/translations/: en.json  ru.json
src/core/models/: __init__.py  analytics.py  base.py  emotion.py  user.py
src/core/repositories/: __init__.py  interfaces.py
src/core/services/: __init__.py  analytics_service.py  checkin_service.py  emotion_translator_service.py  family_service.py  report_service.py  user_service.py
src/infrastructure/cache/: __init__.py  redis_service.py
src/infrastructure/database/: __init__.py  database.py
src/infrastructure/monitoring/: __init__.py  analytics.py  health.py  logging.py  metrics.py
src/infrastructure/repositories/: __init__.py  sqlalchemy_repositories.py
src/infrastructure/telegram/: __init__.py  bot.py  handlers.py  keyboards.py  messages.py  states.py  validators.py
